move js code into separate dir. removed unused code

--- a/index.html
+++ b/index.html
@@ -44,228 +44,9 @@
     <script src="node_modules/vue-router/dist/vue-router.js"></script>
     <!--<script src="node_modules/vue-resource/dist/vue-resource.js"></script>-->
 
-    <script type="text/javascript">
+    <script src="src/app.js"></script>
 
 
-        console.log( window.location.pathname);
-
-        //const mainRoute = 'account';
-        const mainRoute = '/scitourn_account';
-        //const mainRoute = '';
-
-        // routes
-        const NotFound = { template: '<p>Page not found</p>' }
-        const Home = { template: '<p>home page</p>' }
-
-        const Login = { template: '<p>Login</p>' }
-        const Register = { template: '<p>Register</p>' }
-        const ForgetPassword = { template: '<p>Forget password</p>' }
-
-        const Dashboard = { template: '<p>Dashboard</p>' }
-        const Tournaments = { template: '<p>Tournaments</p>' }
-        const Teams = { template: '<p>My teams</p>' }
-        const Profile = { template: '<p>Profile</p>' }
-
-        /*const routes = {
-            [mainRoute + '/']: Home,
-            [mainRoute + '/login']: Login,
-            [mainRoute + '/register']: Register,
-            [mainRoute + '/forget-password']: ForgetPassword,
-
-            [mainRoute + '/dashboard']: Dashboard,
-            [mainRoute + '/tournaments']: Tournaments,
-            [mainRoute + '/teams']: Teams,
-            [mainRoute + '/profile']: Profile,
-
-
-        };*/
-
-        const openRoutes = {
-            [mainRoute + '/login']: Login,
-            [mainRoute + '/register']: Register,
-            [mainRoute + '/forget-password']: ForgetPassword,
-        };
-
-        const protectedRoutes = {
-            [mainRoute + '/']: Home,
-            [mainRoute + '/dashboard']: Dashboard,
-            [mainRoute + '/tournaments']: Tournaments,
-            [mainRoute + '/teams']: Teams,
-            [mainRoute + '/profile']: Profile,
-
-
-        };
-
-
-        // vue router
-        /*const routes = [
-            { path: mainRoute + '/', component: Home },
-            { path: mainRoute + '/dashboard', component: Dashboard },
-            { path: mainRoute + '/tournaments', component: Tournaments },
-            { path: mainRoute + '/teams', component: Teams },
-            { path: mainRoute + '/profile', component: Profile },
-
-            { path: mainRoute + '/login', component: Login },
-            { path: mainRoute + '/register', component: Register },
-            { path: mainRoute + '/forget-password', component: ForgetPassword },
-        ];*/
-
-        const Foo = { template: '<div>foo</div>' };
-        const Bar = { template: '<div>bar</div>' };
-
-        /*const routes = [
-            { path: '/foo', component: Foo },
-            { path: '/bar', component: Bar }
-        ];*/
-
-        var authorized = false;
-
-        function requireAuth (to, from, next) {
-
-
-            if(!authorized){
-                next({
-                    path: '/login',
-                    //query: { redirect: to.fullPath }
-                })
-            }
-            else{
-                next()
-            }
-
-            /*if (!auth.loggedIn()) {
-                next({
-                    path: '/login',
-                    query: { redirect: to.fullPath }
-                })
-            } else {
-                next()
-            }*/
-        }
-
-        function authorizedRedirect(to, from, next) {
-            if(authorized){
-                next({
-                    path: '/',
-                    //query: { redirect: to.fullPath }
-                })
-            }
-            else{
-                next()
-            }
-        }
-
-        const routes = [
-
-            { path: '/login', component: Login, beforeEnter: authorizedRedirect },
-            { path: '/register', component: Register, beforeEnter: authorizedRedirect },
-            { path: '/forget-password', component: ForgetPassword, beforeEnter: authorizedRedirect },
-
-            { path: '/', component: Home, beforeEnter: requireAuth },
-            { path: '/dashboard', component: Dashboard, beforeEnter: requireAuth },
-            { path: '/tournaments', component: Tournaments, beforeEnter: requireAuth },
-            { path: '/teams', component: Teams, beforeEnter: requireAuth },
-            { path: '/profile', component: Profile, beforeEnter: requireAuth },
-        ];
-
-        const router = new VueRouter({
-            routes // short for routes: routes
-        });
-
-        /*router.beforeEach((transition)=>{
-
-            console.log('router beforeEach');
-
-            /!*if(transition.to.auth){
-                if(!transition.to.router.app.$store.state.auth.authorized){
-                    transition.abort()
-                    router.go({path:"/"})
-                }
-            }
-            transition.next()*!/
-
-            transition.next();
-
-
-
-        });*/
-
-        /*router.beforeEach(function(transition) {
-            //checkUserIsLogin
-            console.log('router beforeEach');
-            transition.next()
-        });*/
-
-
-
-        // sample component
-        Vue.component('todo-item', {
-            template: '<li>This is a todo</li>'
-        });
-
-        /*const app = new Vue({
-            router
-        }).$mount('#app');*/
-
-
-        // vue app instance
-        var app = new Vue({
-            el: '#app',
-            data: {
-                message: 'Hello Vue! 111',
-                seen: true,
-
-                currentRoute: window.location.pathname
-                //message: 'You loaded this page on ' + new Date()
-            },
-            methods: {
-                reverseMessage: function () {
-                    this.message = this.message.split('').reverse().join('')
-                }
-            },
-            /*computed: {
-                ViewComponent () {
-
-                    var authorized = false;
-                    var currentRoute = this.currentRoute;
-
-
-
-                    if(authorized){
-                        return protectedRoutes[currentRoute] || NotFound;
-                    }
-                    else{
-                        return openRoutes[currentRoute] || Login;
-                    }
-                }
-            },*/
-            router,
-            //render (h) { return h(this.ViewComponent) }
-        });
-
-        //Vue.http.interceptors.push({
-        /*Vue.http.interceptors.push({
-
-            request: function (request){
-
-                console.log('interceptor request');
-
-                //request.headers['Authorization'] = auth.getAuthHeader()
-                return request
-            },
-
-            response: function (response) {
-
-                console.log('interceptor response');
-
-                //console.log('status: ' + response.data)
-                return response;
-            }
-
-        });*/
-
-
-    </script>
 
 </body>
 </html>
