added webpack. added components. added auth service. changes in router

--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
     </div>
 
     <script src="node_modules/vue/dist/vue.js"></script>
+   <!-- <script src="node_modules/vue/dist/vue.js"></script>-->
     <script src="node_modules/vue-router/dist/vue-router.js"></script>
     <!--<script src="node_modules/vue-resource/dist/vue-resource.js"></script>-->
 
-    <script src="src/app.js"></script>
+    <!--<script src="src/app.js"></script>-->
+    <script src="dist/build.js"></script>
 
 
 
