added classic design

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link href="css/main.css" rel="stylesheet" type="text/css"/>
+    <link href="css/account.css" rel="stylesheet" type="text/css"/>
+    <link href="css/custom.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
